force-app/main/default/objects/Expedition__c/Expedition__c.object-meta.xml
<CustomObject>
    <label>Expedition</label>
    <nameField>
        <label>Expedition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expeditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>