force-app/main/default/objects/Expedition__c/fields/Expedition_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expedition_End_Date__c</fullName>
    <label>Expedition End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>