force-app/main/default/objects/Expedition__c/fields/Expedition_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expedition_Start_Date__c</fullName>
    <label>Expedition Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>