force-app/main/default/objects/Expedition__c/fields/Port_Name__c.field-meta.xml
<CustomField>
    <fullName>Port_Name__c</fullName>
    <label>Port Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amserdam</fullName>
            </value>
            <value>
                <fullName>Bari</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>Thessaloniki</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>