force-app/main/default/objects/Expedition__c/validationRules/Validate_Start_Date_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Start_Date_Before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Expedition_End_Date__c &lt;  Expedition_Start_Date__c</errorConditionFormula>
    <errorMessage>Expedition End Date Should be after the Start Date</errorMessage>
</ValidationRule>